--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/DSWlogo.JPEG" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/DSWlogo.JPEG" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.jpeg" />
     
     <title>Defence Sports World</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
