--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="max-width: 100%; overflow-x : hidden;">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.jpeg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.jpeg" />
     
     <title>Defence Sports World</title>
@@ -13,7 +13,7 @@
   </head>
 
 
-  <body>
+  <body style="max-width: 100%; overflow-x : hidden;">
     
     <div id="root"></div>
   
